deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-website
spec:
  selector:
    app: ms-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
