deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: ms-tv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-website
                port:
                  number: 3000
